<resources>
    <string name="app_name">ToolBox</string>

    <string name="calcactivity_title">電卓</string>
    <string name="counteractivity_title">カウンター</string>
    <string name="stopwatchactivity_title">ストップウォッチ</string>
    <string name="timeractivity_title">タイマー</string>
    <string name="musiclistactivity_title">音楽ファイルの選択</string>
    <string name="clockactivity_title">時計</string>
    <string name="clockmenu_title">タイムゾーン</string>
    <string name="qrscanner_title">QRコードリーダー</string>
    <string name="weather_title">天気</string>
    <string name="translator_title">翻訳</string>
    <string name="colorpicker_title">カラーピッカー</string>
    <string name="unitconverter_title">単位変換</string>
    <string name="currencyconverter_title">通貨変換</string>
    <string name="compass_title">コンパス</string>

    <string name="textra_text">「アプリケーション利用者向け制限事項」\n\n１　アプリケーション利用者は、商用目的や公序良俗に反する目的のためにアプリケーションを利用することはできません。ただし、アプリケーションを利用して、Wikipedia等のCreative Commons License の文書や、 GNU General Public License,
        MIT License, Apache License, BSD License 等のオープンソースソフトウェアの文書等の公益性が高い文書であって、アプリケーション利用者がその文書の自動翻訳結果や修正結果を利用者や目的の制限なく一般に無償公開する場合には、当該文書のライセンスが当該文書の利用の目的や範囲等を限定していない場合であっても、
        これによらず利用できます。また、大学等での研究・教育機関における非営利でアカデミックな個人利用の場合も、本アプリケーションを利用可能です。\n\n２　アプリケーションの不適切な利用が発見された場合には、予告無しにアプリケーションの機能を制限することがあります。
        \n\n３　利用回数に上限が設けられることがあります。\n\n４　自動翻訳サービス（以下「本サービス」という。）の提供期間は保証されません。\n\n５　自動翻訳のために入力されたテキストや用語や対訳等の情報の一切については情報通信研究機構（以下「NICT」という。）のサーバーに記録されます。
        このNICTのサーバーに記録されたデータは、NICTにおいて自動翻訳技術の改良のために利用される場合があります。その場合、入力テキストや対訳がそのまま公開されることはありません。また本サービスに個人情報やプライバシーを含む情報、営業秘密等、第三者に対して秘密にしておく必要がある情報は入力しないでください。
        \n\n\n「免責事項」\n\n１　情報通信研究機構（以下「NICT」という。）は、自動翻訳サービス（以下「本サービス」という。）を利用した自動翻訳結果の正確性を保証するものではありません。\n\n２　本サービスや関連するソフトウェア又はドキュメントの使用により利用者等に損害が生じた場合でもNICTは一切責任を負いません。
        \n\n３　NICTは、日本を含む全ての国や地域で本サービスや関連するソフトウェア又はドキュメントの利用が合法であることを保証するものではありません。</string>

    <string-array name="tools">
        <item>電卓</item>
        <item>カウンター</item>
        <item>ストップウォッチ</item>
        <item>タイマー</item>
        <item>時計</item>
        <item>QRコードリーダー</item>
        <item>天気</item>
        <item>翻訳</item>
        <item>カラーピッカー</item>
        <item>単位変換</item>
        <item>通貨変換</item>
        <item>コンパス</item>
    </string-array>
    
    <string-array name="tools_kana">
        <item>でんたく</item>
        <item>かうんたー</item>
        <item>すとっぷうぉっち</item>
        <item>たいまー</item>
        <item>とけい</item>
        <item>きゅーあーるこーどりーだー</item>
        <item>てんき</item>
        <item>ほんやく</item>
        <item>からーぴっかー</item>
        <item>たんいへんかん</item>
        <item>つうかへんかん</item>
        <item>こんぱす</item>
    </string-array>

    <string name="calc_0">0</string>
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_plus">+</string>
    <string name="calc_minus">-</string>
    <string name="calc_mul">×</string>
    <string name="calc_div">÷</string>
    <string name="calc_ac">AC</string>
    <string name="calc_clear">C</string>
    <string name="calc_eq">=</string>
    <string name="calc_parentheses">( )</string>
    <string name="calc_period">.</string>
    <string name="calc_percent">%</string>

    <string-array name="language">
        <item>日本語</item>
        <item>英語</item>
        <item>韓国語</item>
        <item>中国語(繁体)</item>
        <item>中国語(簡体)</item>
        <item>ドイツ語</item>
    </string-array>

    <string-array name="language_url">
        <item>ja</item>
        <item>en</item>
        <item>ko</item>
        <item>zh-TW</item>
        <item>zh-CN</item>
        <item>de</item>
    </string-array>

    <string-array name="unit_type">
        <item>長さ</item>
        <item>重さ</item>
        <item>面積</item>
        <item>体積・容量</item>
    </string-array>

    <string-array name="unit_length">
        <item>μm</item>
        <item>mm</item>
        <item>cm</item>
        <item>m</item>
        <item>km</item>
    </string-array>

    <string-array name="unit_weight">
        <item>μg</item>
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>t</item>
    </string-array>

    <string-array name="unit_area">
        <item>mm²</item>
        <item>cm²</item>
        <item>m²</item>
        <item>a</item>
        <item>ha</item>
        <item>km²</item>
    </string-array>

    <string-array name="unit_volume">
        <item>ml</item>
        <item>cl</item>
        <item>dl</item>
        <item>l</item>
        <item>kl</item>
        <item>mm³</item>
        <item>cm³(cc)</item>
        <item>m³</item>
    </string-array>
</resources>